# Backend

./: .env  .gitignore  Cargo.toml  README.md  cert.pem  deploy.sh  key.pem  log4rs.yaml  nopass.pem  schema.md
migrations/2023-03-05-082850_create_tables/: down.sql  up.sql
migrations/2023-03-10-150756_create_tables/: down.sql  up.sql
migrations/2023-03-11-172941_create_tables/: down.sql  up.sql
migrations/2023-03-17-085341_create_tables/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs  sql_actions.rs
