[package]
name = "backend"
version = "0.1.0"
authors = ["Jeremy Petch", "Harkaran Bual"]
edition = "2021"
description = "A backend RESTful API"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" #Framework
diesel = { version = "2.0.3", features = ["mysql"] } #Using mariadb for this project
dotenvy = "0.15" # Crate to organise env vars
env_logger = "0.10.0" #Logging service for debugging
log = "0.4" #Logging service for debugging
uuid = {version = "1.3.0", features = ["v4"]} #UUID generation
serde = {version = "1.0", features =["derive"]} #Serialisation and Deserialisation
