[package]
name = "backend"
version = "0.1.0"
authors = ["Jeremy Petch", "Harkaran Bual"]
edition = "2021"
description = "A backend RESTful API"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"]} #Framework
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] } #Using sqlite for this project
dotenvy = "0.15" # Crate to organise env vars
openssl = { version = "0.10" }
log = "0.4.17" # Simple logging macros 
uuid = {version = "1.3.0", features = ["v4", "fast-rng"]} #UUID generation
serde = {version = "1.0", features =["derive"]} #Serialisation and Deserialisation
reqwest = "0.11.14" #For queries to listener on client pi
argon2 = "0.5.0" #For password hashing
chrono = "0.4.23" #Time strings
log4rs = {version = "1.2.0", features = ["console_appender", "file_appender"] } #Logging to files & terminal
